--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.PlaylistMaker">
+        <activity android:name=".AudioPlayerActivity"
+            android:exported="false"/>
         <activity
             android:name=".SearchActivity"
             android:exported="false" />
